--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>React Webpack Babel App</title>
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
+	<title>Canul</title>
+	<link rel="stylesheet" href="./styles/screen.css">
 </head>
 <body>
-	<div class="container">
-		<div class="jumbotron">
-			<h1>Jumbotron</h1>
-			<p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-			<p><a class="btn btn-primary btn-lg">Learn more</a></p>
-		</div>
-		<div id="myApp"></div>
-	</div>
+	<div id="canul"></div>
 	<script src="./bundle.js" type="text/javascript"></script>
 </body>
 </html>
