--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<title>Canul</title>
-	<link rel="stylesheet" href="./styles/screen.css">
+	<link rel="stylesheet" href="./screen.css">
 </head>
 <body>
-	<div id="canul"></div>
+	<main id="app" ></main>
 	<script src="./bundle.js" type="text/javascript"></script>
 </body>
 </html>
